--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello World!</p>
+    <header>
+        <h1>Dan Friberg</h1>
+        <nav>
+            <a href="/bio">Bio</a> | 
+            <a href="/listen">Listen</a> | 
+            <a href="/earlyinstruments">Early Instruments</a>
+        </nav>    
+    </header>
+    <section>
+        <p>I am a Dan, a Twin Cities-based clarinetist, retailer, and novice website developer. I perform and teach on a freelance basis, manage the combined printed music                 departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design</p>
+    </section>
 </body>
 </html>
