--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>    
     </header>
     <section>
-        <p>I am a Dan, a Twin Cities-based clarinetist, retailer, and novice website developer. I perform and teach on a freelance basis, manage the combined printed music                 departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design</p>
+        <p>Hello! I am a Twin Cities-based clarinetist, retailer, and novice website developer. I perform and teach on a freelance basis, manage the combined printed music                 departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design</p>
     </section>
 </body>
 </html>
