media query for margin

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         </nav>    
     </header>
     <section>
-        <h2>Welcome</h2>
-        <p>I am a Twin Cities-based clarinetist, retailer, and novice website developer. I play the clarinet and teach on a freelance basis, manage the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design</p>
+        <h2>Hello!</h2>
+        <p>I am a clarinetist, retailer, and novice website developer living in Bloomington, MN. I play the clarinet and teach on a freelance basis, manage the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design</p>
     </section>
 </body>
 </html>
