--- a/listen.html
+++ b/listen.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Dan Friberg</h1>
+        <h1 id="home"><a href="/">Dan Friberg</a></h1>
         <nav>
             <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
@@ -18,7 +18,7 @@
         </nav>    
     </header>
     <main>
-        <h2>Audio Samples of My Playing</h2>
+        <h2>Live Recordings of My Playing</h2>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/59002388&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/robert-schumann-three-romances" title="Robert Schumann Three Romances, Op. 94 - I. Nicht schnell" target="_blank" style="color: #cccccc; text-decoration: none;">Robert Schumann Three Romances, Op. 94 - I. Nicht schnell</a></div>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/58992595&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/saint-saens-clarinet-sonata" title="Saint-Saens Clarinet Sonata - Movement 1" target="_blank" style="color: #cccccc; text-decoration: none;">Saint-Saens Clarinet Sonata - Movement 1</a></div>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/204470450&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/nocturne" title="Aaron Copland Nocturne" target="_blank" style="color: #cccccc; text-decoration: none;">Aaron Copland Nocturne</a></div>
