--- a/index.html
+++ b/index.html
@@ -5,7 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Dan Friberg, Clarinetist">
+    <meta name="author" content="Dan Friberg">
+    <meta property="og:type" content="profile">
+    <meta property="og:title" content="Dan Friberg, Clarinetist">
+    <meta property="og:description" content="About Dan Friberg">
+     <meta property="og:url" content="http://www.danfriberg.com">
+    <meta property="og:image" content="http://www.danfriberg.com/headshot-a.jpg">
+    <meta property="og:profile:first_name" content="Dan">
+     <meta property="og:profile:last_name" content="Friberg">
+
     <link rel="stylesheet" href="/style.css">
+    <script type="application/ld+json">
+        {
+          "@context": "http://schema.org",
+          "@type": "Person",
+          "url": "http://www.danfriberg.com",
+          "name": "Dan Friberg",
+          "givenName": "Daniel",
+          "familyName": "Friberg",
+          "image": "http://www.danfriberg.com/headshot-a.jpg"
+        }
+        </script>
 </head>
 <body>
     <header>
@@ -23,7 +44,7 @@
         <h2 style="margin-block-end:.17em">My Book</h2>
         <div class="flex-container">
             <div class="flex-item-left">
-                <p><em>Clarinet Excerpts in Context</em> is made up of duets that encourage students to practice 12 of the most standard orchestral excerpts in a musical and collaborative setting. The first clarinet part is the solo line just as it appears in the literature, while the second part is a reduction of the orchestra that highlights the most important accompanimental rhythms and harmonies. The idea originated with Burt Hara, who used to require his students to arrange duet like these and perform them in studio class. Includes commentary and tips for each excerpt.</p>
+                <p><em>Clarinet Excerpts in Context</em> is made up of duets that encourage students to practice 12 of the most standard orchestral excerpts in a musical and collaborative setting. The first clarinet part is the solo line just as it appears in the literature, while the second part is a reduction of the orchestra that highlights the most important accompanimental rhythms and harmonies. The idea originated with Burt Hara, who encouraged his students to arrange duet like these and perform them in studio class. Includes commentary and tips for each excerpt.</p>
                 <p>Available for purchase at <a href="https://www.grothmusic.com/p-75917.aspx" target="_blank" title="Buy Clarinet Excerpts in Context" rel="noopener">Groth Music</a>.</p>
             </div>
             <div class="flex-item-right">
@@ -31,8 +52,8 @@
             </div>
         </div>
         <h2>Design</h2>
-        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. Like the ecommerce sites of many small and midsized businesses, grothmusic.com utilizes a plug and play shopping cart platform. That platform in turn relies on various other frameworks (ASP.NET, Bootstrap), libraries (Jquery), and APIs (Google reCAPTCHA, Analytics, Web Fonts, etc.). Superficially, the platform was adequate for its purpose, but the more I worked with it the more I found it to be rigid, complex, and SLOW. For a musician with no coding experience, it seemed downright impenetrable, especially when it came to improving performance.</p>
-        <p>Throughout the entire year of the pandemic and with the help of others more qualified than myself, we have gradually made some measurable progress on the speed, functionality, and design of our site. For me, this entailed learning HTML, CSS, a smattering of Javascript and JQuery, and the basics of ASP.NET MVC and SQL. Also necessary were VS Code, github and Bitbucket, Inkscape, and a variety of other tools like WebPageTest, PageSpeed Insights, FileZilla, Paint, and so on. The work is ongoing, and as of March 2021 I have yet to achieve my goal of meeting the Google Core Web Vitals benchmarks sitewide.</p>
+        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. Like the ecommerce sites of many businesses, grothmusic.com utilizes a third party shopping cart platform. The platform is proprietary, but in turn relies a variety of other frameworks (ASP.NET, Bootstrap), libraries (Jquery), and APIs (Google reCAPTCHA, Analytics, Web Fonts, etc.). It serves its purpose, but its one size fits all nature has drawbacks. As I tried to customize it to the unique needs of our classical sheet music business, I found it to be rigid, complex, secret, and, perhaps worst of all, slow. For a musician with no coding experience, it seemed downright impenetrable.</p>
+        <p>Over the course of the pandemic year, and with vital help from a professional developer for back-end issues, I have gradually made measurable progress on the speed, functionality, and design of our site. For me, a musician with no coding experience, this entailed learning HTML, CSS, a smattering of Javascript and JQuery, and the concepts behind ASP.NET MVC and SQL. I also had to learn some tools of the trade, namely VS Code, source control (Bitbucket), Inkscape, WebPageTest, PageSpeed Insights, Google Search Console and Analytics, and so on. I  The work is ongoing, and as of March 2021 I have yet to achieve my goal of meeting the Google Core Web Vitals benchmarks sitewide.  Frankly, I'm beginning to wonder if it's possible on our platform.</p>
         <p>Actually, improving the performance of grothmusic.com turned out to largely be an exercise in deconstruction. Figuring out which "features" of the shopping cart platform we DIDN'T need and then removing or reducing them without breaking the site was the challenge. A few weeks ago this blog post by Steren Giannini appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. After struggling against the layers of complexity involved with the Groth site, Steren's approach resonated with me: HTML+CSS, simple as that. I decided to apply it to my vanity website. I also used Github Pages as he did, which has allowed me to ditch my webhost and save $7.99/month.</p>
 
     </main>
