Added design page

--- a/earlyinstruments.html
+++ b/earlyinstruments.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Early clarinets and chalumeaux</title>
+    <title>Early clarinets and the Chalumeau</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,19 @@
             <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
             <a href="/listen.html">Listen</a> | 
-            <a href="/earlyinstruments.html">Early Instruments</a>
+            <a href="/earlyinstruments.html">Chalumeau</a> | 
+            <a href="/design.html">Design</a>
         </nav>    
     </header>
     <main>
-        <h2>Early Clarinets and Chalumeaux</h2>
+        <h2>Early Clarinets and the Chalumeau</h2>
         <p>Since 2009 I have developed an interest early clarinets and chalumeaux. Following the completion of my DMA, I lived for ten months in Ghent, Belgium, studying at the conservatory there on a fellowship from the Belgian American Education Foundation. Among other things, I had regular lessons with early clarinet specialist Vincenzo Casale on a 10-key French clarinet. Since that time, I have acquired a collection of more than 20 antique clarinets of varying makes and keys, some of which are more than 200 years old. I also play a 10-key clarinet in B-flat made by Peter van der Poel, based on instruments of Lotz, and own two soprano chalumeaux - one made by Grzegorz Tomaszewicz and one by Thomas Carroll. In 2017 I had the incredible opportunity to perform the Concerto for soprano chalumeau by Johann Friedrich Fasch with the Waterloo-Cedar Falls Symphony. Besides playing these instruments myself, I enjoy sharing them with students in lessons. Handling and playing such old instruments deepens a student’s understanding of our craft and positively informs their approach to the clarinet.</p>
         <div style="display: flex; justify-content: center;">
         <iframe width="420" height="236" src="https://www.youtube.com/embed/-Q9dTkX3rB0" loading="lazy" style="max-width:100%;" srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;top:0;bottom:0;width:100%;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-Q9dTkX3rB0?autoplay=1><img src=https://img.youtube.com/vi/-Q9dTkX3rB0/hqdefault.jpg alt='J. F. Fasch Chalumeau Concerto'><span>▶</span><span style=top:initial;bottom:6em;font-size:16px>J. F. Fasch Chalumeau Concerto</span>
         </a>" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" title="J. F. Fasch Chalumeau Concerto"></iframe></div>
     </main>
+    <footer>
+        <p>Email: <a href="mailto:dsfriberg@gmail.com">dsfriberg@gmail.com</a></p>
+    </footer>
 </body>
 </html>
