--- a/listen.html
+++ b/listen.html
@@ -14,7 +14,8 @@
             <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
             <a href="/listen.html">Listen</a> | 
-            <a href="/earlyinstruments.html">Early Instruments</a>
+            <a href="/earlyinstruments.html">Chalumeau</a> | 
+            <a href="/design.html">Design</a>
         </nav>    
     </header>
     <main>
@@ -24,5 +25,8 @@
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/204470450&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/nocturne" title="Aaron Copland Nocturne" target="_blank" style="color: #cccccc; text-decoration: none;">Aaron Copland Nocturne</a></div>
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/58619433&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/stravinsky-three-pieces-for" title="Stravinsky Three Pieces for Clarinet" target="_blank" style="color: #cccccc; text-decoration: none;">Stravinsky Three Pieces for Clarinet</a></div>
     </main>
+    <footer>
+        <p>Email: <a href="mailto:dsfriberg@gmail.com">dsfriberg@gmail.com</a></p>
+    </footer>
 </body>
 </html>
