--- a/index.html
+++ b/index.html
@@ -35,12 +35,15 @@
             <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
             <a href="/listen.html">Listen</a> | 
-            <a href="/earlyinstruments.html">Early Instruments</a>
+            <a href="/earlyinstruments.html">Chalumeau</a> | 
+            <a href="/design.html">Design</a>
         </nav>    
     </header>
     <main>
         <figure><img src="headshot-a.jpg" width="175" height="175" alt="Dan Friberg" style="border-radius: 50%;"></figure>
         <p>I am a clarinetist, retailer, and novice web developer living in Bloomington, Minnesota. I play and teach the clarinet on a freelance basis, manage the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design.</p>
+        <h2>Clarinet</h2>
+        <p>I have been playing the clarinet for more than 30 years. My focus during that time has been classical music, recently including early instruments. During the 2020-21 season I am acting principal clarinet of the Dubuque Symphony in Iowa. <a href="/bio.html">More</a></p>
         <h2 style="margin-block-end:.17em">My Book</h2>
         <div class="flex-container">
             <div class="flex-item-left">
@@ -52,10 +55,7 @@
             </div>
         </div>
         <h2>Design</h2>
-        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. Like the ecommerce sites of many businesses, grothmusic.com utilizes a third party shopping cart platform. The platform is proprietary, but in turn relies a variety of other frameworks (ASP.NET, Bootstrap), libraries (Jquery), and APIs (Google reCAPTCHA, Analytics, Web Fonts, etc.). It serves its purpose, but its one-size-fits-all design has limitations. As I have tried to customize it to the unique needs of our classical sheet music business, I have found it to be rigid, complex, secret, and, perhaps worst of all, slow.</p>
-        <p>Over the course of the pandemic year, and with vital help from a professional developer for back-end issues, I have gradually made measurable progress improving the speed, functionality, and design of our site. For me, a musician with no coding experience, this entailed learning HTML, CSS, a smattering of Javascript and JQuery, and the concepts behind ASP.NET MVC and SQL databases. I also had to learn some tools of the trade, namely VS Code, source control (Bitbucket), Inkscape, WebPageTest, PageSpeed Insights, Google Search Console and Analytics, and so on. The work is ongoing. As of March 2021 I have yet to achieve my goal of meeting the Google Core Web Vitals benchmarks sitewide.</p>
-        <p>Actually, improving the performance of grothmusic.com turned out to largely be an exercise in deconstruction. Figuring out which aspects of the shopping cart platform we didn't need and then removing or reducing them without breaking the site was the challenge.</p>
-        <p>A few weeks ago this blog post by Steren Giannini appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. After struggling against the layers of complexity involved with the Groth site, Steren's approach resonated with me: HTML+CSS, simple as that. I decided to apply it to my vanity website. I also used Github Pages as he did, which has allowed me to abandon my former webhost and save $96/year.</p>
+        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. The design of this site, danfriberg.com, is inspired by a blog post by Steren Giannini that appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. It's not an anti-design so much as a simple design. My wife's reaction to it was, "Hm, 90s." I'm good with that. <a href="/design.html">More</a></p>
 
     </main>
     <footer>
