Remove home link from nav

--- a/earlyinstruments.html
+++ b/earlyinstruments.html
@@ -11,9 +11,8 @@
     <header>
         <h1 id="home"><a href="/">Dan Friberg</a></h1>
         <nav>
-            <a href="/">Home</a> | 
             <a href="/bio.html">Bio</a> | 
-            <a href="/listen.html">Listen</a> | 
+            <a href="/listen.html">Audio</a> | 
             <a href="/earlyinstruments.html">Chalumeau</a> | 
             <a href="/design.html">Design</a>
         </nav>    
