--- a/earlyinstruments.html
+++ b/earlyinstruments.html
@@ -12,7 +12,7 @@
         <h1 id="home"><a href="/">Dan Friberg</a></h1>
         <nav>
             <a href="/bio.html">Bio</a> | 
-            <a href="/listen.html">Audio</a> | 
+            <a href="/listen.html">Listen</a> | 
             <a href="/earlyinstruments.html">Chalumeau</a> | 
             <a href="/design.html">Design</a>
         </nav>    
