--- a/listen.html
+++ b/listen.html
@@ -25,7 +25,14 @@
         <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/58619433&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/dan-friberg" title="Dan Friberg" target="_blank" style="color: #cccccc; text-decoration: none;">Dan Friberg</a> · <a href="https://soundcloud.com/dan-friberg/stravinsky-three-pieces-for" title="Stravinsky Three Pieces for Clarinet" target="_blank" style="color: #cccccc; text-decoration: none;">Stravinsky Three Pieces for Clarinet</a></div>
     </main>
     <footer>
-        <p>Email: <a href="mailto:dsfriberg@gmail.com">dsfriberg@gmail.com</a></p>
+        <p>Email: <a href="mailto:dsfriberg@gmail.com">dsfriberg@gmail.com</a>
+        <a href="https://www.linkedin.com/in/danfriberg/" target="_blank" title="Dan on LinkedIn" rel="noopener">
+            <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" id="linkedin">
+            <title>LinkedIn</title>
+            <g><path d="M34,2.5v29A2.5,2.5,0,0,1,31.5,34H2.5A2.5,2.5,0,0,1,0,31.5V2.5A2.5,2.5,0,0,1,2.5,0h29A2.5,2.5,0,0,1,34,2.5ZM10,13H5V29h5Zm.45-5.5A2.88,2.88,0,0,0,7.59,4.6H7.5a2.9,2.9,0,0,0,0,5.8h0a2.88,2.88,0,0,0,2.95-2.81ZM29,19.28c0-4.81-3.06-6.68-6.1-6.68a5.7,5.7,0,0,0-5.06,2.58H17.7V13H13V29h5V20.49a3.32,3.32,0,0,1,3-3.58h.19c1.59,0,2.77,1,2.77,3.52V29h5Z" fill="currentColor"></path></g>
+            </svg>
+        </a>
+        </p>
     </footer>
 </body>
 </html>
