--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             </div>
         </div>
         <h2>Design</h2>
-        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. That project continues and has proven far more complex than I imagined. The design of the site you're on now, danfriberg.com, is inspired by a blog post by Steren Giannini that appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. It's not an anti-design so much as a simple, indestructable, and fast design. My wife's reaction to it was, "Hm, 90s." I'm good with that for now. <a href="/design.html">READ MORE</a></p>
+        <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. That project is ongoing and has proven far more complex than I imagined.</p>
+        <p>The design of the site you're on now, danfriberg.com, is inspired by a blog post by Steren Giannini that appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. It's not an anti-design so much as a simple, indestructable, and fast design. My wife's reaction to it was, "Hm, 90s." I liked the 90s. <a href="/design.html">READ MORE</a></p>
 
     </main>
     <footer>
