--- a/design.html
+++ b/design.html
@@ -17,7 +17,7 @@
             <a href="/design.html">Design</a>
         </nav>    
     </header>
-    <mainn>
+    <main>
         <h2>Design</h2>
         <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. Like the ecommerce sites of many businesses, grothmusic.com utilizes a third party shopping cart platform. The platform is proprietary, but in turn relies a variety of other frameworks (ASP.NET, Bootstrap), libraries (Jquery), and APIs (Google reCAPTCHA, Analytics, Web Fonts, etc.). It serves its purpose, but its one-size-fits-all design has limitations. As I tried to customize it to the unique needs of our classical sheet music business, I found it to be rigid, complex, secret, and, perhaps worst of all, slow.</p>
         <p>Over the course of the pandemic year, and with vital help from a professional developer named Martin Cambronne for back-end issues, I have gradually made measurable progress improving the speed, functionality, and design of our site. For me, a musician with no coding experience, this entailed learning HTML, CSS, a smattering of Javascript and JQuery, and the concepts behind ASP.NET MVC and SQL databases. It required learning some tools of the trade, namely VS Code, source control (Bitbucket), Inkscape, WebPageTest, PageSpeed Insights, Google Search Console and Analytics, and so on.</p>
