--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <figure><img src="headshot-a.jpg" width="175" height="175" alt="Dan Friberg" style="border-radius: 50%;"></figure>
         <p>I am a clarinetist, retailer, and novice web developer living in Bloomington, Minnesota. I play and teach the clarinet on a freelance basis, manage the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design.</p>
         <h2>Clarinet</h2>
-        <p>I have been playing the clarinet for more than 30 years. My focus during that time has been classical music, recently including early instruments. During the 2020-21 season I am acting principal clarinet of the <a href="https://www.dubuquesymphony.org/" target="_blank" title="Visit grothmusic.com" rel="noopener">Dubuque Symphony</a>. <a href="/bio.html">READ MORE</a></p>
+        <p>I have been playing the clarinet for more than 30 years, primarily in orchestral and chamber settings. During the 2020-21 season I am acting principal clarinet of the <a href="https://www.dubuquesymphony.org/" target="_blank" title="Visit grothmusic.com" rel="noopener">Dubuque Symphony</a>. I also have an interest in early instruments, particularly the chalumeau. <a href="/bio.html">READ MORE</a></p>
         <h2 style="margin-block-end:.17em">My Book</h2>
         <div class="flex-container">
             <div class="flex-item-left">
@@ -55,7 +55,7 @@
         </div>
         <h2>Design</h2>
         <p>I became interested in web design and development as a means to an end, namely understanding and improving our store's website: <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">grothmusic.com</a>. That project is ongoing and has proven far more complex than I imagined.</p>
-        <p>The design of the site you're on now, danfriberg.com, is inspired by a blog post by Steren Giannini that appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. It's not an anti-design so much as a simple, indestructable, and fast design. My wife's reaction to it was, "Hm, 90s." I liked the 90s. <a href="/design.html">READ MORE</a></p>
+        <p>The design of the site you're on now, danfriberg.com, is inspired by a blog post by Steren Giannini that appeared in my feed: <a href="https://blog.steren.fr/2020/my-stack-will-outlive-yours/" target="_blank" rel="noopener">My stack will outlive yours</a>. It's not an anti-design so much as a simple, indestructable, and fast design, comprised entirely of HTML and CSS. My wife's reaction to it was, "Hm, 90s." I liked the 90s, so I take that as a compliment.<a href="/design.html">READ MORE</a></p>
 
     </main>
     <footer>
