--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h2 style="margin-block-end:.17em">My Book</h2>
         <div class="flex-container">
             <div class="flex-item-left">
-                <p><em>Clarinet Excerpts in Context</em> is made up of duets that encourage students to practice 12 of the most standard orchestral excerpts in a musical and collaborative setting. The first clarinet part is the solo line just as it appears in the literature, while the second part is a reduction of the orchestra that highlights the most important accompanimental rhythms and harmonies. The idea originated with Burt Hara, who encouraged his students to arrange duet like these and perform them in studio class. Includes commentary and tips for each excerpt.</p>
+                <p><em>Clarinet Excerpts in Context</em> is made up of duets that encourage students to practice 12 of the most standard orchestral excerpts in a musical and collaborative setting. The first clarinet part is the solo line just as it appears in the literature, while the second part is a reduction of the orchestra that highlights the most important accompanimental rhythms and harmonies. The idea originated with Burt Hara, who encouraged his students to arrange duets like these and perform them in studio class. Includes commentary and tips for each excerpt.</p>
                 <p>Available for purchase at <a href="https://www.grothmusic.com/p-75917.aspx" target="_blank" title="Buy Clarinet Excerpts in Context" rel="noopener">Groth Music</a>.</p>
             </div>
             <div class="flex-item-right">
