--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </nav>    
     </header>
     <main>
-        <figure><img src="headshot-a.jpg" width="175" height="175" alt="Dan Friberg" style="border-radius: 50%;"></figure>
+        <figure><img src="headshot-a.jpg" width="175" height="175" alt="Dan Friberg"></figure>
         <p>I am a clarinetist, retailer, and novice web developer living in Bloomington, Minnesota. I play and teach the clarinet on a freelance basis, manage the combined printed music departments of <a href="https://www.grothmusic.com" target="_blank" title="Visit grothmusic.com" rel="noopener">Groth and Eble Music Cos.</a>, and dabble in web design.</p>
         <h2>Clarinet</h2>
         <p>I have been playing the clarinet for more than 30 years, primarily in orchestral and chamber settings. I also have an interest in early instruments, particularly the chalumeau. <a href="/bio.html">READ MORE</a></p>
